# Tactile2

./: CMakeLists.txt  vcpkg.json
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
source/base/lib/: CMakeLists.txt
source/base/test/src/container/: lookup_test.cpp
source/base/test/src/io/: int_parser_test.cpp  tile_io_test.cpp
source/base/test/src/meta/: attribute_test.cpp  attribute_type_test.cpp  color_test.cpp
source/base/test/src/numeric/: extent_2d_test.cpp  index_2d_test.cpp  offset_2d_test.cpp  saturate_cast_test.cpp  vec_common_test.cpp  vec_format_test.cpp  vec_stream_test.cpp  vec_test.cpp
source/base/test/src/platform/: bits_test.cpp  filesystem_test.cpp
source/base/test/src/util/: buffer_test.cpp  format_test.cpp  scope_exit_test.cpp  tile_matrix_test.cpp
source/core/lib/: CMakeLists.txt
source/core/lib/src/: logging.cpp  tactile_app.cpp
source/core/lib/src/debug/: assert.cpp  performance.cpp  terminate.cpp
source/core/lib/src/document/: document_manager.cpp  layer_view_impl.cpp  map_document.cpp  map_view_impl.cpp  meta_view_impl.cpp  object_view_impl.cpp  tile_view_impl.cpp  tileset_view_impl.cpp
source/core/lib/src/engine/: engine.cpp
source/core/lib/src/event/: component_event_handler.cpp  edit_event_handler.cpp  file_event_handler.cpp  layer_event_handler.cpp  map_event_handler.cpp  object_event_handler.cpp  property_event_handler.cpp  tileset_event_handler.cpp  view_event_handler.cpp  viewport_event_handler.cpp
source/core/lib/src/io/: ini.cpp  texture.cpp
source/core/lib/src/layer/: layer_common.cpp  tile_layer.cpp
source/core/lib/src/map/: map.cpp
source/core/lib/src/model/: model.cpp
source/core/lib/src/numeric/: random.cpp
source/core/lib/src/platform/: filesystem.cpp
source/core/lib/src/tile/: tileset.cpp
source/core/lib/src/ui/: fonts.cpp  menu_bar.cpp
source/core/test/src/: main.cpp
source/json_util/: CMakeLists.txt
source/log/: CMakeLists.txt
source/log/lib/: CMakeLists.txt
source/log/lib/inc/tactile/log/: file_log_sink.hpp  log_level.hpp  log_sink.hpp  logger.hpp  terminal_log_sink.hpp
source/log/lib/src/: file_log_sink.cpp  logger.cpp  terminal_log_sink.cpp
source/plugins/godot_tscn/lib/: CMakeLists.txt
source/plugins/tactile_yaml/lib/: CMakeLists.txt
source/plugins/tiled_tmj/: CMakeLists.txt
source/plugins/tiled_tmj/lib/: CMakeLists.txt
source/plugins/tiled_tmj/lib/inc/tactile/tiled_tmj/: api.hpp  logging.hpp  tmj_common.hpp  tmj_format_parser.hpp  tmj_format_plugin.hpp  tmj_format_save_visitor.hpp  tmj_save_format.hpp
source/plugins/tiled_tmj/lib/src/: logging.cpp  tmj_common.cpp  tmj_format_parser.cpp  tmj_format_plugin.cpp  tmj_format_save_visitor.cpp  tmj_save_format.cpp
source/plugins/tiled_tmj/test/: CMakeLists.txt
source/plugins/tiled_tmx/lib/: CMakeLists.txt
source/plugins/zlib/lib/: CMakeLists.txt
source/plugins/zstd/lib/: CMakeLists.txt
source/renderers/null/lib/: CMakeLists.txt
source/renderers/opengl/lib/: CMakeLists.txt
source/renderers/opengl/test/: CMakeLists.txt
source/renderers/vulkan/lib/: CMakeLists.txt
source/runtime/lib/: CMakeLists.txt
source/runtime/lib/src/: command_line_options.cpp  dynamic_library.cpp  launcher.cpp  logging.cpp  plugin_instance.cpp  protobuf_context.cpp  runtime.cpp  runtime_impl.cpp  sdl_context.cpp  window.cpp  window_impl.cpp
source/runtime/test/: CMakeLists.txt
source/runtime/test/src/: save_format_roundtrip_test.cpp
(+180 files in other folders)
